--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
-:root {
+:root, html {
     /*  fonts  */
     --font-bold: 'Gilroy-Bold', sans-serif;
     --font-heavy: 'Gilroy-Heavy', sans-serif;
@@ -19,4 +19,74 @@
     --grey-light: #BFCEDC;
     --grey-dark: #939FB3;
     --white: #FFFFFF;
+    
+    /*  gradients  */
+    --bg-teal: linear-gradient(135deg, var(--teal-light), var(--teal-dark));
+    --bg-dark: linear-gradient(135deg, var(--bg-color-dark), var(--bg-color-light));
+    --bg-yellow: linear-gradient(135deg, var(--yellow-dark), var(--yellow-light));
+    --bg-blue: linear-gradient(135deg, var(--blue-dark), var(--blue-light));
+    --bg-grey: linear-gradient(135deg, var(--grey-dark), var(--grey-light));
+}
+
+body {
+    font-family: var(--font-regular);
+    letter-spacing: normal;
+    font-size: 16px;
+}
+
+.content_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 2rem;
+    color: var(--white);
+    background: var(--bg-dark);
+    h1, h4 {
+        color: var(--white);
+        text-align: center;
+        letter-spacing: .2rem;
+    }
+    h1 {
+        font-size: 3rem;
+        letter-spacing: .2rem;
+        font-family: var(--font-heavy);
+        margin-bottom: .5rem;
+    }
+    h4 {
+        font-size: 1.6rem;
+        font-family: var(--font-regular);
+        margin-bottom: 2rem;
+    }
+}
+
+.pricing_table {
+    display: flex;
+    flex-direction: row;
+}
+
+.pricing_card {
+    width: 16rem;
+    max-width: 16rem;
+    height: 38rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.pricing_card:nth-of-type(1) {
+    background: var(--bg-yellow);
+}
+
+.pricing_card:nth-of-type(2) {
+    background: var(--bg-teal);
+}
+
+.pricing_card:nth-of-type(3) {
+    background: var(--bg-blue);
+}
+
+.pricing_card:nth-of-type(4) {
+    background: var(--bg-grey);
 }
