--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
-:root, html {
+:root {
     /*  fonts  */
     --font-bold: 'Gilroy-Bold', sans-serif;
     --font-heavy: 'Gilroy-Heavy', sans-serif;
     --font-light: 'Gilroy-Light', sans-serif;
     --font-medium: 'Gilroy-Medium', sans-serif;
     --font-regular: 'Gilroy-Regular', sans-serif;
+
     /*  colors */
     --bg-color-light: #5D5F73;
     --bg-color-dark: #2F2F3D;
@@ -27,18 +28,17 @@
     --bg-blue: linear-gradient(0deg, var(--blue-dark), var(--blue-light));
     --bg-grey: linear-gradient(0deg, var(--grey-dark), var(--grey-light));
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-
 body {
     font-family: var(--font-regular);
-    letter-spacing: normal;
+    letter-spacing: .05rem;
     font-size: 16px;
-    
 }
 
 .content_container {
@@ -64,6 +64,7 @@ body {
     > h4 {
         font-size: 1.6rem;
         font-family: var(--font-regular);
+        font-weight: normal;
         margin-bottom: 2rem;
     }
 }
@@ -79,9 +80,9 @@ body {
     position: relative;
     width: 16rem;
     max-width: 16rem;
-    height: 35rem;
+    min-height: 36rem;
     margin: .3rem .3rem;
-    padding: 4rem 1rem 1rem 1rem;
+    padding: 4rem 1.5rem 1.5rem 1.5rem;
     border-radius: .2rem;
     display: flex;
     flex-direction: column;
@@ -130,11 +131,10 @@ body {
     display: block;
     height: 7rem;
     object-fit: cover;
-
 }
 
 .card_title {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-family: var(--font-bold);
     color: var(--white);
     text-align: left;
@@ -142,8 +142,9 @@ body {
 }
 
 .card_subtitle {
-    font-size: .9rem;
+    font-size: .76rem;
     font-family: var(--font-light);
+    font-weight: normal;
     color: var(--white);
     text-align: left;
     margin: 0;
@@ -163,7 +164,7 @@ body {
     content: "$";
     display: block;
     position: absolute;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     top: .5rem;
     left: 0;
 }
@@ -181,18 +182,17 @@ body {
 
 .feature_list_item {
     position: relative;
-    font-size: 1rem;
+    font-size: .8rem;
     font-family: var(--font-regular);
     color: var(--white);
     text-align: left;
-    margin: .5rem 0 0 0;
+    margin: 1rem 0 0 0;
 }
 
 .feature_list_item::before {
-    content: "✓";
-    display: block;
+    content: url("data:image/svg+xml,%3Csvg width='11' height='9' viewBox='0 0 11 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.08211 8.13804C3.16306 8.21899 3.27288 8.26445 3.38735 8.26445C3.50186 8.26445 3.61164 8.21896 3.69256 8.13804L9.57737 2.25323C9.65834 2.17228 9.70381 2.0625 9.70381 1.94802C9.70381 1.83352 9.65834 1.72373 9.57737 1.64278L8.35645 0.421892C8.1879 0.253345 7.91457 0.253317 7.746 0.421892L3.38747 4.78048L2.16652 3.55953C2.08557 3.47858 1.97575 3.43309 1.86128 3.43309C1.74681 3.43309 1.63702 3.47858 1.55607 3.55953L0.33515 4.78045C0.166604 4.94903 0.166604 5.22232 0.33515 5.3909L3.08211 8.13804Z' fill='white'/%3E%3C/svg%3E");
+    /*"✓"*/
     position: absolute;
-    font-size: 1rem;
     top: 0;
     left: -1.3rem;
 }
@@ -203,14 +203,14 @@ body {
     align-items: center;
     align-self: flex-end;
     width: 100%;
-    height: 3rem;
+    height: 2.5rem;
     margin-top: auto;
-    padding: .5rem 1rem;
+    padding: .3rem .7rem;
     border-radius: .2rem;
     background: transparent;
     border: .1rem solid var(--white);
     color: var(--white);
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-family: var(--font-medium);
     text-align: center;
     text-decoration: none;
@@ -231,7 +231,5 @@ body {
     :nth-of-type(4) & {
         color: var(--grey-dark);
     }   
-    
-    
 }
 
