--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5rem 2rem;
+    justify-content: center;
+    /* padding: 5rem 2rem; */
     color: var(--white);
     background: var(--bg-dark);
     > h1, > h4 {
